--- a/demo/expand health/v2/views/submission-detail.html
+++ b/demo/expand health/v2/views/submission-detail.html
@@ -199,7 +199,7 @@
                 <h1 id="submissionFormName">Onboarding Form</h1>
                 <p class="submission-meta">
                   <span id="clientName">Client Name</span>
-                  <span class="meta-separator">â€¢</span>
+                  <span class="meta-separator">•</span>
                   <span id="submissionDate">Dec 17, 2025</span>
                 </p>
               </div>
